<resources>
    <string name="app_name">Poker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username needs to be at least 4 letters long</string>
    <string name="error_invalid_password">This password needs to contain at least one number</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="play_game">Play</string>
    <string name="instructions">How To Play</string>
    <string name="title_activity_instructions">How To Play?</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="deal_card">Deal Card</string>
    <string name="declare_hand">Declare Hand</string>
    <string name="bet">Bet</string>
    <string name="bet_amount">Enter your bet amount...</string>
    <string name="check">Check</string>
    <string name="fold">Fold</string>
    <string name="player_balance">PLAYER_BALANCE</string>
    <string name="dealer_balance">DEALER_BALANCE</string>
    <string name="next_hand">Next Hand</string>
</resources>
