<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#296e2e"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <ImageView
        android:id="@+id/image_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher_background"
        android:visibility="gone" />


    <Button
        android:id="@+id/button_next_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_bet"
        android:layout_alignParentRight="true"
        android:onClick="onClickDealCard"
        android:text="@string/deal_card"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_declare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_bet"
        android:layout_alignParentRight="true"
        android:onClick="onClickDeclare"
        android:text="@string/declare_hand"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_next_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_bet"
        android:layout_alignParentRight="true"
        android:onClick="onClickNextHand"
        android:text="@string/next_hand"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/linear_cards_dealer_hand"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_card_dealer_first"
            android:layout_width="150dp"
            android:layout_height="172.5dp"
            android:src="@drawable/gray_back"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/image_card_dealer_second"
            android:layout_width="150dp"
            android:layout_height="172.5dp"
            android:src="@drawable/gray_back"
            android:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/relative_cards_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#940000"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_cards_flop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/image_card_flop_first"
                android:layout_width="120dp"
                android:layout_height="138dp"
                android:src="@drawable/z14s" />

            <ImageView
                android:id="@+id/image_card_flop_second"
                android:layout_width="120dp"
                android:layout_height="138dp"
                android:src="@drawable/z14s" />

            <ImageView
                android:id="@+id/image_card_flop_third"
                android:layout_width="120dp"
                android:layout_height="138dp"
                android:src="@drawable/z14s" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_cards_rest"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_card_turn"
                android:layout_width="120dp"
                android:layout_height="138dp"
                android:src="@drawable/z14s"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/image_card_river"
                android:layout_width="120dp"
                android:layout_height="138dp"
                android:src="@drawable/z14s"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_cards_player_hand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_card_first"
            android:layout_width="150dp"
            android:layout_height="172.5dp"
            android:src="@drawable/z14s"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/image_card_second"
            android:layout_width="150dp"
            android:layout_height="172.5dp"
            android:src="@drawable/z14s"
            android:visibility="visible" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_dealer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text_dealer_balance"
        android:text="Talia"
        android:textColor="#940000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_dealer_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColor="#940000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="visible" />


    <TextView
        android:id="@+id/text_player_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:textColor="#940000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_player_balance"
        android:layout_alignParentRight="true"
        android:textColor="#940000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/linear_bet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_player_name"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:orientation="vertical"
        android:visibility="visible">


        <EditText
            android:id="@+id/edit_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="$ Bet?"
            android:inputType="numberDecimal"
            android:textColor="#940000" />

        <Button
            android:id="@+id/button_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickBet"
            android:padding="10dp"
            android:text="@string/bet"
            android:textColor="#240303" />


        <Button
            android:id="@+id/button_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickCheck"
            android:padding="10dp"
            android:text="@string/check"
            android:textColor="#240303" />

        <Button
            android:id="@+id/button_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/linear_bet"
            android:layout_alignParentRight="true"
            android:onClick="onClickAllIn"
            android:text="All in"
            android:visibility="visible" />


        <Button
            android:id="@+id/button_fold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFold"
            android:padding="10dp"
            android:text="@string/fold"
            android:textColor="#240303" />


    </LinearLayout>

    <Button
        android:id="@+id/button_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_bet"
        android:onClick="onClickMatch"
        android:padding="10dp"
        android:text="Match Raise?"
        android:textColor="#240303"
        android:visibility="gone" />


</RelativeLayout>